--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="inner">
         <h1>Iman Abbasnejad</h1>
         <h2>Personal Home page</h2>
-        <a href="https://github.com/imanabbasnejad/imanabbasnejad" class="button"><small>View project on</small> GitHub</a>
+        <a href="https://imanabbasnejad.com/imanabbasnejad" class="button"><small>View project on</small> GitHub</a>
       </div>
     </header>
 
